[package]
name = "advanced-clipboard"
version = "0.0.1"
authors = ["Markus Richter <markus.richter@hu-berlin.de>"]
license = "MPL-2.0"

[dependencies]
mime = "0.3"

# dependencies taken from clipboard-rust
# [target.'cfg(windows)'.dependencies]
# clipboard-win = "2.0.0"

#[target.'cfg(target_os = "macos")'.dependencies]
#objc = "0.2"
#objc_id = "0.1"
#objc-foundation = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
#x11-clipboard = "0.2"
error-chain = "0.11"
xcb = { version = "0.8", features = [ "thread" ] }